<resources>
    <string name="app_name">SWith</string>
    <string name="app_name_kr">스윗</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- 스터디, 회차탭 -->
    <string name="no_study">진행중인 스터디가 없어요! \n 한번 찾아볼까요?</string>
    <string name="create_info">회차는 날짜 순에 따라 조정됩니다.</string>
    <string name="create_place_hint1">온라인, 오프라인 선택</string>
    <string name="create_place_hint2">장소(텍스트 입력)</string>
    <string name="create_detail">회차 내용\n(텍스트 입력)\nex) 브루트 포스 알고리즘\np177까지 읽기\np178내용 발표</string>
    <string name="create_round_start_time">시작 시간</string>
    <string name="create_round_end_time">종료 시간</string>
    <string name="calendar_no_round_manage">해당 날짜에 개설된 회차가 없습니다.\n새로 만들러 가볼까요?</string>
    <string name="calendar_no_round_default">해당 날짜에 개설된 회차가 없습니다.</string>
    <string name="calendar_no_round_before">해당 날짜에 개설되었던 회차가 없습니다.</string>
    <string name="attend_no_people">스터디에 참석 중인 스터디 원이 없어요!\n스터디 원을 모집 해봐요!</string>
    <string name="bottom_attend_guide">- 해당 회차에 출석을 진행합니다. \n- 출석을 하게 되면 취소 할 수 없습니다.</string>
    <string name="bottom_memo_create_guide">- 메모가 새롭게 생성됩니다. \n- 메모를 자유롭게 수정할 수 있습니다.</string>
    <string name="bottom_memo_update_guide">- 메모 내용이 수정됩니다. \n- 수정을 하게 되면 취소 할 수 없습니다.</string>
    <string name="find_search_hint">"원하는 스터디를 찾아보세요!(제목)"</string>
    <string name="memo_hint">"회차별 자신만의 메모를 만들어보세요!"</string>
    <string name="memo_guide">"화면을 터치해 메모를 작성하세요!"</string>
    <string name="bottom_round_create_guide">"- 생성되는 회차는 날짜 순으로 조정됩니다.\n- 회차 생성 후 수정 및 삭제는 관리자 탭에서 가능합니다."</string>
    <string name="manage_round_modify">"- 회차 내용이 작성한 대로 수정됩니다.\n- 회차 번호는 날짜 순으로 조정됩니다.</string>
    <string name="manage_round_no_round">"해당 그룹에는\n수정 가능한 회차가 없습니다."</string>
    <string name="manage_no_attend">"해당 회차에는\n출석 정보가 없습니다.</string>
    <string name="bottom_manage_attend">"- 해당 회차의 출석 정보가 변경됩니다.\n- 출석 정보가 선택한 대로 일괄 변경됩니다."</string>
    <string name="manage_attend_guide">출석 정보를 관리할 회차를 선택하세요.</string>

    <!-- common -->
    <string name="complete">완료</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="logout">로그아웃</string>
    <string name="camera">카메라</string>
    <string name="gallery">갤러리</string>
    <string name="save">저장</string>


    <!-- login, splash -->
    <string name="login_title">우리의 소중한 시간관리</string>
    <string name="login">로그인</string>
    <string name="login_kakao">카카오로 시작하기</string>

    <!--profile-->
    <string name="profile">프로필</string>
    <string name="profile_admin">프로필 설정</string>
    <string name="nickname">닉네임</string>
    <string name="nickname_hint">닉네임을 입력하세요.</string>
    <string name="interesting">관심분야</string>
    <string name="introduce">소개글</string>
    <string name="location">활동지역</string>
    <string name="choice">선택해주세요.</string>
    <string name="introduce_hint">소개글을 적어주세요.</string>
    <string name="profile_complete">프로필 수정을 완료하시겠습니까?</string>
    <string name="profile_complete_detail">회원가입이 완료되었습니다. 정말 완료하시겠습니까?</string>
    <string name="profile_resume">내 지원서</string>
    <string name="complete_study">완료한 스터디 총</string>
    <string name="choice_image">이미지 가져올 방법을 선택하세요.</string>
    <string name="profile_modify_place_select_hint">지역을 선택해주세요.</string>

    <!--resume-->
    <string name="resume_status">상태 : </string>
    <string name="resume_detail">지원서 내용</string>
    <string name="resume_save">수정하시겠습니까?</string>
    <string name="resume_cancel">신청을 취소하시겠습니까?</string>

    <!--manage finish-->
    <string name="manage_study_finish_title">스터디를 종료하시겠습니까?</string>
    <string name="manage_study_finish">오늘 날짜 이후의 회차는 모두 삭제됩니다.</string>

    <!--manage resume-->
    <string name="manage_resume_reject">반려</string>
    <string name="manage_resume_confirm">승인</string>

    <!--create-->
    <string name="study_create_editText">직접 입력해주세요</string>
    <string name="study_confirm">제출하시겠습니까?</string>
    <string name="study_create_title">제목을 입력해주세요</string>

    <!--find-->
    <string name="study_find_search">원하는 스터디를 찾아보세요!</string>
    <string name="study_find_region">지역선택</string>

    <!-- interesting spinner-->
    <string-array name="intersting">
        <item>분류선택</item>
        <item>자격증/시험</item>
        <item>어학</item>
        <item>청소년/입시</item>
        <item>취업/창업</item>
        <item>컴퓨터/IT</item>
        <item>취미/문화</item>
        <item>면접</item>
    </string-array>
</resources>