<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="profileDialog"
            type="com.example.swith.ui.dialog.CustomDialog" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg_top_round_white"
            app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/kr_bold"
            android:textSize="16dp"
            android:text="@string/profile_complete"
            android:textColor="@color/black"/>
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/color_F1F1F1"
            app:layout_constraintTop_toBottomOf="@id/tv_title"/>

        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_complete_detail"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/kr_regular"
            android:textColor="@color/color_686868"
            android:textSize="12dp"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="170dp"
            android:layout_height="44dp"
            android:fontFamily="@font/kr_regular"
            android:textSize="14dp"
            android:onClick="@{() -> profileDialog.onClose()}"
            android:textColor="@color/color_969696"
            android:background="@drawable/btn_round_gray_selector"
            android:text="@string/cancel"
            app:layout_constraintTop_toBottomOf="@id/tv_detail"
            android:layout_marginTop="27dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"/>
        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="170dp"
            android:layout_height="44dp"
            android:fontFamily="@font/kr_regular"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:text="@string/confirm"
            android:onClick="@{() -> profileDialog.onConfirm()}"
            android:background="@drawable/btn_round_blue_selector"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail"
            android:layout_marginTop="27dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>