<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_manage_finish"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toBottomOf="@id/toolbar_manage_finish"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_finish_title"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:background="@drawable/card_view"
                android:elevation="6dp"
                android:text="@string/manage_study_finish"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"/>
            <Button
                android:id="@+id/btn_no"
                android:layout_width="170dp"
                android:layout_height="44dp"
                android:fontFamily="@font/kr_regular"
                android:textSize="14dp"
                android:textColor="@color/color_969696"
                android:background="@drawable/btn_round_gray_selector"
                android:text="@string/cancel"
                app:layout_constraintTop_toBottomOf="@id/tv_finish_title"
                android:layout_marginTop="27dp"
                app:layout_constraintStart_toStartOf="parent" />
            <Button
                android:id="@+id/btn_yes"
                android:layout_width="170dp"
                android:layout_height="44dp"
                android:fontFamily="@font/kr_regular"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:text="@string/confirm"
                android:background="@drawable/btn_round_blue_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_finish_title"
                android:layout_marginTop="27dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>