<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="profileModifyViewModel"
            type="com.example.swith.viewmodel.ProfileModifyViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.profile.ProfileModifyActivity">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/tb_profile_modify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            app:elevation="0dp"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/toolbar"
                app:layout_constraintTop_toTopOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(profileModifyViewModel.interest1)}"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/kr_regular"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_F1F1F1"
                app:layout_constraintBottom_toBottomOf="parent" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_profile_modify">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_profile"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="44dp"
                    app:placeholder="@{@drawable/ic_profile_default}"
                    app:imageUrl="@{profileModifyViewModel.profileData.profileImgUrl}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/civ_profile"
                    app:layout_constraintEnd_toEndOf="@id/civ_profile">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/civ_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:civ_border_width="1dp"
                        android:onClick="@{() -> profileModifyViewModel.testEdit()}"
                        android:background="@drawable/ic_profile_modify" />
                </FrameLayout>

                <TextView
                    android:id="@+id/tv_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/nickname"
                    android:fontFamily="@font/kr_regular"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/civ_profile" />

                <EditText
                    android:id="@+id/et_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/nickname_hint"
                    android:textColorHint="@color/color_9F9F9F"
                    android:textColor="@color/black"
                    android:fontFamily="@font/kr_regular"
                    android:textSize="14sp"
                    android:text="@{profileModifyViewModel.profileData.nickname}"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="14dp"
                    android:background="@drawable/bg_round_gray"
                    app:layout_constraintTop_toBottomOf="@id/tv_nickname" />

                <TextView
                    android:id="@+id/tv_interesting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/interesting"
                    android:textSize="14sp"
                    android:fontFamily="@font/kr_regular"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_nickname" />

                <LinearLayout
                    android:id="@+id/cl_interesting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="20dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_interesting">

                    <Button
                        android:id="@+id/btn_interesting1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="+"
                        android:textSize="13sp"
                        android:minHeight="0dp"
                        android:paddingVertical="12dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/kr_regular"
                        android:textColor="@color/white"
                        android:background="@drawable/btn_round_skyblue_selector" />

                    <Button
                        android:id="@+id/btn_interesting2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="+"
                        android:textSize="13sp"
                        android:minHeight="0dp"
                        android:paddingVertical="12dp"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/kr_regular"
                        android:textColor="@color/white"
                        android:background="@drawable/btn_round_skyblue_selector"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/location"
                    android:textSize="14sp"
                    android:fontFamily="@font/kr_regular"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cl_interesting" />

                <TextView
                    android:id="@+id/tv_location_detail"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:background="@drawable/btn_round_skyblue_selector"
                    android:textColor="@color/white"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/profile_modify_place_select_hint"
                    android:textColorHint="@color/white"
                    android:text="@{profileModifyViewModel.profileData.region}"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_location" />

                <TextView
                    android:id="@+id/tv_introduce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/introduce"
                    android:textSize="14sp"
                    android:fontFamily="@font/kr_regular"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_location_detail" />

                <EditText
                    android:id="@+id/et_introduce_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="14dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:hint="@string/introduce_hint"
                    android:text="@{profileModifyViewModel.profileData.introduction}"
                    android:textColorHint="@color/color_9F9F9F"
                    android:background="@drawable/bg_round_gray"
                    app:layout_constraintTop_toBottomOf="@id/tv_introduce" />


                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:text="@string/complete"
                    android:layout_marginBottom="67dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="16sp"
                    android:background="@drawable/btn_round_blue_selector"
                    android:fontFamily="@font/kr_regular"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/et_introduce_detail"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <FrameLayout
            android:id="@+id/fl_loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#63494848"
            android:clickable="true"
            android:visibility="visible"
            android:visibleGone="@{profileModifyViewModel.isLoading()}">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/color_swith" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>