<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="imageDialog"
            type="com.example.data.ui.dialog.CustomImageDialog" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg_top_round_white"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_close"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:onClick="@{() -> imageDialog.onClose()}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/color_F1F1F1"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_close"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/kr_bold"
                android:textSize="16dp"
                android:text="@string/choice_image"
                android:textColor="@color/black" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="25dp"
                android:background="@color/color_F1F1F1"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <ImageButton
                android:id="@+id/btn_camera"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_camera"
                android:onClick="@{() -> imageDialog.onCamera()}"
                android:background="?android:attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@id/view"
                app:layout_constraintEnd_toStartOf="@id/btn_gallery"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:layout_marginTop="7dp"
                android:text="@string/camera"
                android:fontFamily="@font/kr_regular"
                app:layout_constraintTop_toBottomOf="@id/btn_camera"
                app:layout_constraintStart_toStartOf="@id/btn_camera"
                app:layout_constraintEnd_toEndOf="@id/btn_camera" />

            <ImageButton
                android:id="@+id/btn_gallery"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_gallery"
                android:onClick="@{() -> imageDialog.onGallery()}"
                android:background="?android:attr/selectableItemBackground"
                app:layout_constraintStart_toEndOf="@id/btn_camera"
                app:layout_constraintTop_toTopOf="@id/view"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:layout_marginTop="7dp"
                android:text="@string/gallery"
                android:fontFamily="@font/kr_regular"
                app:layout_constraintTop_toBottomOf="@id/btn_gallery"
                app:layout_constraintStart_toStartOf="@id/btn_gallery"
                app:layout_constraintEnd_toEndOf="@id/btn_gallery" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>